# folklore

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: hashmap.rs  parallel.rs
src/: array.rs  lib.rs  nano.rs  smol.rs  store.rs  test.rs  util.rs
tests/: nano.rs
