[package]
name = "folklore"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A lock-less concurrent hash map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "1.0.0"
bytemuck = "1.14.3"
# Disabling default-features disables the spinlock fallback, so atomic reads and writes will always be lock-less
atomic = { version = "0.6.0", default-features = false }

[dev-dependencies]
fixedstr = "0.5.5"
criterion = "0.5.1"
rand = "0.8.5"
leapfrog = { version = "0.3.0", features = ["stable_alloc"] }

[[bench]]
name = "hashmap"
harness = false

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
module_name_repetitions = "allow"
